<resources>
    <string name="app_name">Monopoly One (unofficial)</string>
    <string name="iv_description_monopoly_one">Monopoly One</string>
    <string name="et_email_hint">Email</string>
    <string name="et_email_error">Email is invalid</string>
    <string name="et_password_hint">Password</string>
    <string name="et_password_error">Password is invalid</string>
    <string name="bt_login_text">Login</string>
    <string name="profile">profile</string>
    <string name="friends">friends</string>
    <string name="chat">chat</string>
    <string name="inventory">inventory</string>
    <string name="Friends">Friends</string>
    <string name="friend_s_nickname">Friend\'s nickname</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="_10">10</string>

    <!-- Errors list: https://docs.mnpl.one/api/http/intro -->
    <string name="dialog_error_title">Error message</string>
    <string name="dialog_error_1_text">Authorisation Error. Login or password aren\'t correct.</string>
    <string name="dialog_error_2_text">A required parameter was not passed or the passed parameters are invalid.</string>
    <string name="dialog_error_3_text">Internal Server Error.</string>
    <string name="dialog_error_4_text">You do not have permission to execute this request.</string>
    <string name="dialog_error_5_text">An unknown API method was called.</string>
    <string name="dialog_error_6_text">The number of requested objects has been exceeded. The maximum number of objects that can be passed in one request is 50.</string>
    <string name="dialog_error_7_text">Request limit exceeded. Request limit exceeded. Time until the limit is lifted: %s</string>
    <string name="dialog_error_8_text">Captcha required. Most likely, several unsuccessful attempts were made to login into your profile. Try later or from a different IP address.</string>
    <string name="dialog_error_10_text">The server cannot process the request right now.</string>
    <string name="dialog_error_11_text">Confirmation required.</string>
    <string name="dialog_error_12_text">Requires entering the code from the authenticator app.</string>
    <string name="dialog_error_98_text">The method is undergoing technical work and is temporarily disabled.</string>
    <string name="dialog_error_99_text">An unknown error has occurred</string>
    <string name="dialog_error_101_text">The user does not exist.</string>
    <string name="dialog_error_104_text">The user is mutated. The mute will be removed in %s.</string>
    <string name="dialog_error_107_text">The user added you to the block list.</string>
    <string name="dialog_error_412_text">The account is globally blocked.</string>
    <string name="dialog_error_413_text">Invalid TOTP session key.</string>
    <string name="dialog_error_414_text">Too frequent TOTP authorization.</string>
    <string name="dialog_error_603_text">Any of the transferred items cannot be used in crafting.</string>
    <string name="dialog_error_605_text">Items must be of the same type and class.</string>
    <string name="dialog_error_624_text">Such an item cannot be used in this operation.</string>
    <string name="dialog_error_701_text">The request cannot be completed due to the user\'s privacy settings.</string>
    <string name="dialog_error_1203_text">The message was not sent due to chat restrictions. Reason: %s</string>

    <string name="error_1203_reason_disabled">the chat is closed for receiving messages.</string>
    <string name="error_1203_reason_strict">the chat is in strict mode so the message hasn\'t been filtered.</string>
    <string name="error_1203_reason_emotes_only">the chat in “emoticons only” mode.</string>
    <string name="error_1203_reason_bot_limitations">the bot has exceeded any limit.</string>


    <string name="dialog_failure_title">Failure</string>
    <string name="dialog_failure_text">An error occurred while executing the request. Please try again.</string>

    <string name="dialog_noInternet_title">No internet</string>
    <string name="dialog_noInternet_text">The request cannot be completed because you are not connected to the Internet.</string>

    <string name="dialog_bt_ok">OK</string>
    <string name="nickname">Nickname</string>
    <string name="rank_name">Rank name</string>
    <string name="rank_level">rank level</string>
    <string name="_11">11</string>
    <string name="xp">XP to lvl.</string>
    <string name="_12">12</string>
    <string name="_477">477</string>
    <string name="message">message</string>
    <string name="_94">94</string>
    <string name="matches">matches</string>
    <string name="_25">25</string>
    <string name="wins">wins</string>
    <string name="inventory_1">Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="you_can_find_new_friend_by_id_or_domain">Find new friend by id or domain</string>
    <string name="go">GO</string>
    <string name="find_a_friend">Find a friend</string>
    <string name="add_to_friends">Add to friends</string>
    <string name="other">Other</string>
    <string name="et_2faCode_hint">Code from an authenticator app</string>
    <string name="dialog_bt_cancel">Cancel</string>
    <string name="dialog_bt_verify">Verify</string>
    <string name="you_are_friends">You are friends.</string>
    <string name="Other">Other</string>
    <string name="delete">Delete</string>
    <string name="inventory1">Inventory</string>
    <string name="loading">Loading…</string>
    <string name="title">title</string>
    <string name="type">type</string>
    <string name="sent_to_craft">Send to craft</string>
    <string name="all">all</string>
    <string name="inventory2">Inventory</string>
    <string name="craft">Craft</string>
</resources>