<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="48dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivFriend"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="@id/cvCard"
            app:layout_constraintEnd_toEndOf="@id/cvCard"
            app:layout_constraintStart_toStartOf="@id/cvCard"
            app:layout_constraintTop_toTopOf="@id/cvCard" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rank_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/cvCard"
        app:layout_constraintTop_toTopOf="@id/cvCard" />

    <TextView
        android:id="@+id/tvRankLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rank_level"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvRankName"
        app:layout_constraintTop_toBottomOf="@id/tvRankName" />

    <TextView
        android:id="@+id/tvRankLevelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_11"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvRankLevel"
        app:layout_constraintTop_toBottomOf="@id/tvRankName" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:max="100"
        android:progress="5"
        android:progressDrawable="@drawable/progress_bar"
        app:layout_constraintBottom_toBottomOf="@id/cvCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvRankLevel" />

    <TextView
        android:id="@+id/tvToLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/to_lvl"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvRankLevel"
        app:layout_constraintEnd_toStartOf="@id/tvNextLevel"
        app:layout_constraintTop_toTopOf="@id/tvRankLevel" />

    <TextView
        android:id="@+id/tvNextLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvRankLevel"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        app:layout_constraintTop_toTopOf="@id/tvRankLevel" />

    <TextView
        android:id="@+id/tvXp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_477"
        android:textSize="16sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@id/tvRankLevel"
        app:layout_constraintEnd_toStartOf="@+id/tvToLevel"
        app:layout_constraintTop_toTopOf="@id/tvRankLevel" />


</androidx.constraintlayout.widget.ConstraintLayout>